# PeatUploader

./: pyproject.toml
accounts/: admin.py  forms.py  models.py
accounts/migrations/: 0001_initial.py
config/: settings.py  urls.py
peat_uploader/: admin.py  apps.py  forms.py  models.py
peat_uploader/migrations/: 0001_initial.py
templates/: base.html  home.html
templates/account/: login.html  logout.html  signup.html
